--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
  <header class="text-center">
   <h4>Angular Gemini Chatbot</h4>
  </header>
+ <body class="flex justify-content-center align-items-center">
+  <app-response-display></app-response-display>
+ </body>
   <footer>
     <app-search-bar></app-search-bar>
   </footer>
